# .dotfiles

./: .bash_profile  .bashrc  .gitconfig  .gitexcludes  .gitignore  .inputrc  .jshintrc  .pre-commit-config.yaml  .screenrc  .tmux.conf  .vimrc  .zshrc  README.md  autoenv  body.zsh  brew-setup.sh  init.zsh  jupyter_notebook_config.py  setup.sh  setup_pyenv.sh
.dotfiles/: .gitexcludes  README.md  migrate_files.sh  setup.sh
.dotfiles/dmj-tools/: README.md  git_clean_gone.py
.emacs.d/: .gitignore  README.org  init.el
.emacs.d/setup/: 03-ui.el  10-ace.el  10-auto-complete.el  10-avy.el  10-conda.el  10-hippie-expand.el  10-js.el  10-ledger.el  10-lsp-mode.el  10-paredit.el  10-projectile.el  10-python.el  10-recentf.el  10-yasnippet.el  95-custom.el
.zsh/: example-local.zsh  update_completion.sh
.zsh/custom/: init.zsh
bash/: 05-path.sh  10-run-zsh.sh  20-aliases.sh  21-functions.sh  30-options.sh  50-prompt.sh  60-history.sh  65-git.sh  base.sh
dmj-tools/: clean_git_gone.py  git-trash  pyproject.toml  setup.py
dotfiles/: README.md  bootstrap_dotfiles.sh
dotfiles/dmj-tools/: git-clean-stash
dotfiles/local-example/: init-local.el
home/: .abcde.conf  .bash_profile  .bashrc  .gitconfig  .jshintrc  .jshintrc.example  .screenrc  .tmux.conf  .vimrc  .zshrc  README.md  jupyter_notebook_config.py
home/.emacs.d/: .gitignore  init.el
home/.zsh/: prompt_mine_setup  prompt_simple_setup  setup_conda  update_completion.sh
home/dmj-tools/: setup.py  (+1 more)
local-example/: init-local.el
vscode/: settings.json
zsh/: README.md  gitrash  init.zsh  update_completion.sh
(+45 files in other folders)
